Bug 357545 - Pager tooltip doesn't list minimized windows, only maximized ones
Summary: Pager tooltip doesn't list minimized windows, only maximized ones
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Pager widget (other bugs)
Version First Reported In: 5.5.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-04 20:27 UTC by jose luis m
Modified: 2016-06-13 09:45 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.7.0
Sentry Crash Report:
kde: Usability?


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jose luis m 2016-01-04 20:27:52 UTC
In Pager, when you hover over any virtual desktop , it lists the windows opened it the respective virtual desktop, which is very useful to know which programs are running in any particular virtual desktop. If those windows are minimized, Pager doesn't list them, and if you only have minimized windows in  a particular virtual desktop, pager tooltip says "0 windows", which is just wrong. 

Reproducible: Always

Steps to Reproduce:
1.open a window(s)  in a any virtual desktop and keep it maximized.
2.In pager, hover your pointer over this specific desktop (pager should list the windows present in that virtual desktop correctly)
3.minimize that window(s) and hover again over that virtual desktop, pager doesn't list the minimized windows, although those windows are still opened.
Comment 1 Kai Uwe Broulik 2016-03-07 16:53:53 UTC
Usability: Minimized windows are ignored from the little window previews which is probably why they're ignored in the tooltip as well. Should they be shown in the tooltip always?
Comment 2 jose luis m 2016-03-07 17:10:56 UTC
Well, the thing is that when you hover over pager, it says "0 windows" , not "0 windows maximized". 
 Besides that, to me doesn't make sense to report only maximized windows given that everytime  i hover over any virtual desktop in pager it's because i want to know if there are any window opened (nor maximized or minimized) in that virtual desktop and have a list of those windows without changing the desktop.  So for me the current implementation for maximized windows would be ideal but for all  opened windows.
 Maybe others dont use pager hover  like me, to me is almost natural and i cant recall if it was this way in kde3/4 but now it seems wrong.
Comment 3 Thomas Pfeiffer 2016-03-10 13:45:54 UTC
The previews have nothing to do with the list of windows. A minimized window is still a window, so yes, it should clearly be listed in the pager tooltip.
Comment 4 jose luis m 2016-05-06 18:33:46 UTC
I think that developers could give answers about bugs saying if they will fix them, if they won't and if they will do it maybe give a not really precise period of time. Answers always  encourages people to ask and given that nobody is the position to  demand for something here at least people who cares (who posted the bug cares ) may know what will happen.
Comment 5 Kai Uwe Broulik 2016-06-13 09:45:55 UTC
Git commit 3c252192cfb38d5d3d6d71ff8f7f497bcdd58039 by Kai Uwe Broulik.
Committed on 13/06/2016 at 09:44.
Pushed by broulik into branch 'master'.

[Pager] List minimized windows in the tooltip

The tooltip now shows minimized windows in a separate list below the regular ones.
FIXED-IN: 5.7.0
REVIEW: 127332

M  +64   -22   applets/pager/package/contents/ui/main.qml
M  +9    -4    applets/pager/plugin/model.cpp
M  +5    -3    applets/pager/plugin/model.h
M  +2    -2    applets/pager/plugin/pager.cpp

http://commits.kde.org/plasma-desktop/3c252192cfb38d5d3d6d71ff8f7f497bcdd58039