[Pager] List minimized windows in the tooltip

The tooltip now shows minimized windows in a separate list below the regular ones.

BUG: 357545
FIXED-IN: 5.7.0
REVIEW: 127332